<resources>
    <string name="app_name">Edara Finance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="insurance">Insurance</string>
    <string name="service">service(s) :</string>
    <string name="search">Search</string>
    <string name="work_order">Work Order</string>
    <string name="edit">Edit</string>
    <string name="pay">Pay</string>
    <string name="result">Result</string>
    <string name="_15_l_e">15 L.E</string>
    <string name="cost">Cost</string>
    <string name="labor_cost">Labor Cost</string>
    <string name="spare_parts_cost">Spare Parts Cost</string>
    <string name="total">Total</string>

    <string name="cancel">Cancel</string>
    <string name="discount">Discount</string>
    <string name="clint_name">Clint Name: </string>
    <string name="unit_number">Unit No: </string>
    <string name="analysis_code">Analysis Code: </string>
    <string name="tax">Tax</string>
    <string name="extra_charge">Extra Charge</string>
    <string name="proceed_to_payment">Go To Payment</string>
    <string name="zero">0</string>
    <string name="privet_service">Private Service</string>
    <string name="save">Save</string>
    <string name="print_only">Print</string>
    <string name="edara_property_management_logo">edara property management logo</string>
    <string name="discount_">Discount :</string>
    <string name="labor_cost_">Labor Cost :</string>
    <string name="spare_parts_">Spare Parts </string>
    <string name="tax_">Tax :</string>
    <string name="extra_charge_">Extra Charge :</string>
    <string name="fawry">Fawry</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="visa">Visa</string>
    <string name="insurance_settlement">Insurance Settlement</string>
    <string name="transfer">Transfer</string>
    <string name="cl">Credit Letters</string>

    <string name="other">Other</string>
    <string name="save_and_proceed_to_payment">Save And Proceed To Payment</string>
    <string name="or">OR</string>
    <string name="money_value"> %,.2f L.E</string>
    <string name="string_value">%s : %s</string>

    <string name="select_all">Select All</string>
    <string name="geidea_package_name">com.geidea.meeza.smartpos</string>
    <string name="date">Date :</string>
    <string name="reciept_no">Receipt No:</string>
    <string name="project">Project :</string>
    <string name="unit_code">Unit Code :</string>
    <string name="collection_no">Collection No:</string>
    <string name="service_">Service</string>
    <string name="amount">Amount</string>
    <string name="total_included_tax">Total Included VAT \'If Any\' Tax are included</string>
    <string name="user">User :</string>
    <string name="geidia">Geidia</string>
    <string name="service_name">service name</string>
    <string name="recipt_qr_code">recipt qr code</string>
    <string name="notes">Notes</string>
    <string name="dash">_ _</string>
    <string name="address">Building 1, services area,Beverly Hills, Sheikh Zayed\n
Hotline #: 16230\n
VAT: 340-250-73</string>
    <string name="seprator">__________________________________________________________________</string>
    <string name="find_unit_by">Find Unit By:</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="payment_succeeded">Payment Succeeded</string>

    <string name="recipt_image">recipt image</string>
    <string name="fawry_username">Fawry UserName</string>
    <string name="fawry_password">Fawry Password</string>
    <string name="confirm">confirm</string>
    <string name="qrcode_placeholder">data:png/jpeg;base64,iVBORw0KGgoAAAANSUhEUgAAAGoAAABqCAYAAABUIcSXAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAhySURBVHhe7ZGBiitJDAP3/3/6HQMrEIUVuSfzjguXArFIlt2z5OfPl4/g+0N9CN8f6kP4/lAfwveH+hC+P9SH8P2hPoTvD/Uh1B/q5+fnlraw7zde5U1iml0iaZ5ywdy7J2rUxnR0oy3s+41XeZOYZpdImqdcMPfuiRq1sT0kWp/z5kXr0YuUE/bkKUEvUp7Y9mvj6Yc5b160Hr1IOWFPnhL0IuWJbb82eEieEqc+oR77yVNimrm2sJ/2U48S9InaSIcpceoT6rGfPCWmmWsL+2k/9ShBn6iNdJgS9KT15ZkT9qQGe767yUWaJ08J+kRtpMOUoCetL8+csCc12PPdTS7SPHlK0CdqIx2mRPJJd5luvRKZOpPENHOJ5ClBn6iNdJgSySfdZbr1SmTqTBLTzCWSpwR9oja2hwT78szFdp7YzimS8lNO72z7tfHuw/LMxXae2M4pkvJTTu9s+7WhQ6cS/1d/qkZtTEc3Ev9Xf6pGb/wl+IH+0Z4LzqnEtifYl0TK/zb/3kuA/6j/854LzqnEtifYl0TK/zbrl9KHMd/6pMTUfUKJ1GNOiZafst5IDzDf+qTE1H1CidRjTomWn3K84Y/7g/TkqXkTmTqXxDS7JOiFd31OT3znVY/sm7+kh+jJU/MmMnUuiWl2SdAL7/qcnvjOqx7ZNwvpA+hF6lGNbU+0/vaeekmi+S3nGwF9AD+EXqQe1dj2ROtv76mXJJrfst5oDyZPkZZznnLCefNE86TGtrdlfYkPbz1FWs55ygnnzRPNkxrb3pZ6iQ/KbyXoie9segm/4RIpT6R+8lRj3fv9G+Eh+a0EPfGdTS/hN1wi5YnUT55qrHu/fyM8lHzLJZFywTz5uxLTzJVIvZSLlDfqBg8n33JJpFwwT/6uxDRzJVIv5SLljbpxelh97tGT1GdO0tx3fU4vvDtJJE+RqXNpS20eH7SP8D16kvrMSZr7rs/phXcnieQpMnUubanNdJienM6Tp0TLhXemXHhnk4uUE/a2e6I2dZCH6cnpPHlKtFx4Z8qFdza5SDlhb7sn9s1f9EDTlmn3kqDf0vY4l0+58I7nYpvLM0/0BuADSVum3UuCfkvb41w+5cI7nottLs880Ru/tINprpwSW89ccE6JaXaJpDzBfvMi5Yl1sx1Oc+WU2HrmgnNKTLNLJOUJ9psXKU/Upg5SInmqkfpbz1ww3/okkubMJUHfqE1/xCWSpxqpv/XMBfOtTyJpzlwS9I3a9Ef8cPPitJfmW7jf7mnOHvMkQf809bJ/lH9I8+K0l+ZbuN/uac4e8yRB/zT1cvoA5e9K0IuWbyXohXd9Tk98Z6O71M30gD/+jgS9aPlWgl541+f0xHc2ust6c3rUlXh6Lk8lpq6LpDm9SLm4u0fWTR1OSjw9l6cSU9dF0pxepFzc3SP7JtBDfPDUC+WUoBetJ7/NE6nHPPmUb9k3gT/uD556oZwS9KL15Ld5IvWYJ5/yLbXZDm7nlJhmr0RSLjhP/W3ePHl3Lmrj3Yc0p8Q0eyWScsF56m/z5sm7c1EbOsSDzLdqTDsuMnUm3aXd4bzpLnUzPcR8q8a04yJTZ9Jd2h3Om+5SN/mAP+pKpLnvThL0Db/hEqdetF7zIuWNusHD8lQizX13kqBv+A2XOPWi9ZoXKW/UDR1uD6QevXiqR59Q7ymJlgvveL6lbmwfSD168VSPPqHeUxItF97xfMv5Bth+wHZ+KkGf8F3vM5dIyoXvukjKE/tmwD/m1cPb+akEfcJ3vc9cIikXvusiKU/UJg8mT4lpdinBefJUgnPfeZUnkalz6WnqRT6cPCWm2aUE58lTCc5951WeRKbOpaepF+9+wNN9zuWZi5a3ufCu52Kbb3uJ2tCh7UHxdJ9zeeai5W0uvOu52ObbXqI3DuHD8i2nxDR7JfFULjiXGuz5rueNfXMJP8A/6lVOiWn2SuKpXHAuNdjzXc8b62Y63HKKMH+3JzRnL+WEPUpMs0uCXnh3mpPe+CUdbDlFmL/bE5qzl3LCHiWm2SVBL7w7zUltrA/Zo5PE1lOJNPfdV3PiO5O2TLuuU+rG9rB/xCSx9VQizX331Zz4zqQt067rlLoxPXKJpFxwnvopT7Av33JJTLNLjWnHJVK+pW7wAYmkXHCe+ilPsC/fcklMs0uNacclUr7lfAPwYf+YVyJTxyVanvAd7zGXniLdO33n7S/ig/JNZOq4RMsTvuM95tJTpHun76ybOpxEmHvX1Zh2XI3UpxenvXfnW9ZNf3QSYe5dV2PacTVSn16c9t6db6nN9hDnzZM0V76dN4mWk9aT34qknNRGe4Dz5kmaK9/Om0TLSevJb0VSTnrjTfwjXY3Wb3PRepxLYppdEvQk9Zk39s2b8MOkRuu3uWg9ziUxzS4JepL6zBu1ycNbEebv9kTr0yfUY595kkg+5Vtq0x85EWH+bk+0Pn1CPfaZJ4nkU76lNo8PLvvqJZE0pye+M6nRett56zXq5ukD2756SSTN6YnvTGq03nbeeo26yQf8UZdIvuXSKdONSSLlgrl3XWKavRJJOakNHpKnRPItl06ZbkwSKRfMvesS0+yVSMpJbfCQPCXoSeoniWl2ibSc8+a3aO+uGrXBQ37cJehJ6ieJaXaJtJzz5rdo764atcFDftwl6IV3NyJpTi+862qk3nafaI/79I3aTA9Qgl54dyOS5vTCu65G6m33ifa4T9+ozeOD6G/31TvtE+atxzlzSUwzl0j5XeqF04fY3+6rd9onzFuPc+aSmGYukfK71At8cKu7TLcuCXqResxFm4vWO83Juvf7N6JDp7rLdOuSoBepx1y0uWi905yse79/v/zH+f5QH8L3h/oQvj/Uh/D9oT6E7w/1IXx/qA/h+0N9BH/+/AOXm+8KLM1r3wAAAABJRU5ErkJggg==</string>
    <string name="oops">sorry</string>
    <string name="close">close</string>
    <string name="make_sure_you_enter_right_values_or_contact_the_it_department">* Make Sure you enter right credentials this is not reversible</string>

</resources>